--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.5",
     "cloudinary": "^2.4.0",
+    "date-fns": "^4.1.0",
     "mongoose": "^8.5.4",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
