--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.5",
+    "chart.js": "^4.4.6",
     "cloudinary": "^2.4.0",
     "date-fns": "^4.1.0",
     "mongoose": "^8.5.4",
